syntax = "proto3";

package cm.yuntongxun.grpc.service.echo;

option java_multiple_files = false;
option java_package = "cm.yuntongxun.grpc.service.echo";
option java_outer_classname = "EchoProto";

// The greeting service definition.
service Echo {
  // Sends a greeting
  rpc sayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}